updated web link
updated link

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 	function zoomToFeature(e) {
 		// map.fitBounds(e.target.getBounds());
-		window.open('http://www.google.com/');
+		window.open('https://calendar.google.com/calendar/u/0/embed?src=mcusa.calendar@gmail.com&ctz=America/Los_Angeles');
 		// window.location = "http://www.google.com/"; 
 	}
 
