--- a/index.html
+++ b/index.html
@@ -151,29 +151,29 @@
 	// map.attributionControl.addAttribution('Population data &copy; <a href="http://census.gov/">US Census Bureau</a>');
 
 
-	// var legend = L.control({position: 'bottomright'});
+	var legend = L.control({position: 'bottomright'});
 
-	// legend.onAdd = function (map) {
+	legend.onAdd = function (map) {
 
-	// 	var div = L.DomUtil.create('div', 'info legend'),
-	// 		grades = [0, 10, 20, 50, 100, 200, 500, 1000],
-	// 		labels = [],
-	// 		from, to;
+		var div = L.DomUtil.create('div', 'info legend'),
+			grades = [10, 20, 30, 50, 70, 100, 140],
+			labels = ['<h4>Facility Count</h4>'],
+			from, to;
 
-	// 	for (var i = 0; i < grades.length; i++) {
-	// 		from = grades[i];
-	// 		to = grades[i + 1];
+		for (var i = 0; i < grades.length; i++) {
+			from = grades[i];
+			to = grades[i + 1];
 
-	// 		labels.push(
-	// 			'<i style="background:' + getColor(from + 1) + '"></i> ' +
-	// 			from + (to ? '&ndash;' + to : '+'));
-	// 	}
+			labels.push(
+				'<i style="background:' + getColor(from + 1) + '"></i> ' +
+				from + (to ? '&ndash;' + to : '+'));
+		}
 
-	// 	div.innerHTML = labels.join('<br>');
-	// 	return div;
-	// };
+		div.innerHTML = labels.join('<br>');
+		return div;
+	};
 
-	// legend.addTo(map);
+	legend.addTo(map);
 
 </script>
 
